--- a/etc/ocserv/ocserv.conf
+++ b/etc/ocserv/ocserv.conf
@@ -130,14 +130,14 @@ socket-file = /var/run/ocserv-socket
 # certificate renewal (they are checked and reloaded periodically;
 # a SIGHUP signal to main server will force reload).
 
-server-cert = /etc/ocserv/certificate/
-server-key = /etc/ocserv/certificate/
+server-cert = /etc/ocserv/cert/server-cert.pem
+server-key = /etc/ocserv/cert/server-key.pem
 
 # Diffie-Hellman parameters. Only needed if for old (pre 3.6.0
 # versions of GnuTLS for supporting DHE ciphersuites.
 # Can be generated using:
 # certtool --generate-dh-params --outfile /etc/ocserv/dh.pem
-dh-params =/etc/ocserv/certificate/dh.pem
+dh-params =/etc/ocserv/dh.pem
 
 # In case PKCS #11, TPM or encrypted keys are used the PINs should be available
 # in files. The srk-pin-file is applicable to TPM keys only, and is the 
@@ -157,9 +157,7 @@ dh-params =/etc/ocserv/certificate/dh.pem
 # The Certificate Authority that will be used to verify
 # client certificates (public keys) if certificate authentication
 # is set.
-# ca-cert = /etc/ocserv/ca.pem
-# ca-cert = ../tests/certs/ca.pem
-# ca-cert = /data/cert/wyi.hk/ca.cer
+ca-cert = /etc/ocserv/cert/ca-cert.pem
 
 ### All configuration options below this line are reloaded on a SIGHUP.
 ### The options above, will remain unchanged. Note however, that the 
@@ -405,8 +403,8 @@ rekey-method = ssl
 # STATS_BYTES_OUT, STATS_DURATION that contain a 64-bit counter of the bytes 
 # output from the tun device, and the duration of the session in seconds.
 
-connect-script = /etc/ocserv/scripts.sh
-disconnect-script = /etc/ocserv/scripts.sh
+# connect-script = /etc/ocserv/scripts.sh
+# disconnect-script = /etc/ocserv/scripts.sh
 
 # UTMP
 # Register the connected clients to utmp. This will allow viewing
